se arregla problema con la conexion y la bdd se creo la nueva migracion

--- a/ProyectoDAW/appsettings.json
+++ b/ProyectoDAW/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "AllowedHosts": "*",
+
   "ConnectionStrings": {
-    "Conexion": "server=localhost\\SQLEXPRESS;Database=RestauranteProyect;Trusted_Connection=true;Encrypt = False;"
+    "Conexion": "server=CZALAMEA\\SQLEXPRESS;Database=RestaurantProject;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
   }
-}
+  }
